--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>I'm baby post-ironic iPhone authentic activated charcoal literally blue bottle drinking vinegar raclette bodega boys +1 tumeric. Af marfa plaid VHS shoreditch knausgaard. Bushwick butcher microdosing swag helvetica sustainable. Yuccie air plant tousled coloring book taxidermy adaptogen umami.</p>
         <div class="searcher">
           <form class="" action="index.html" method="post">
-            <input type="search" placeholder="search for your ingredients">
+            <input type="search" placeholder="search for your ingredients" class="tenting">
             <input class="testing" type="submit" value="Search it!">
           </form>
         </div>
